# AI-Based-Career-Recommendation-System

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKEND_FRONTEND_INTEGRATION.md  CHECKOUT_PAGE_GUIDE.md  CONTRIBUTING.md  HUONG_DAN_CHAY_4_GOI.md  INTERACTIVE_ASSESSMENT_SETUP.md  LOGO_STANDARDIZATION.md  PAYMENT_FIX_INSTRUCTIONS.md  README.md  REFACTOR_PATTERN.md  ROADMAP_FINAL_IMPROVEMENTS.md  STORY_ASSESSMENT_GUIDE.md  add_admin_features_tables.sql  add_career_goals_feature.sql  add_processed_results_fields.sql  check_blog_status_enum.sql  create_blog_posts_table.sql  create_usage_tracking.sql  database_setup.sql  docker-compose.yml  fix-and-start.bat  fix_blog_status_enum.sql  mtmp.txt  package-lock.json  pyproject.toml  readme.txt  requirements.txt  restart-backend.bat  run_blog_migration.py  run_cv_migration.py  tatus  test_vnpay_url.py  test_zalopay.py  tmp_nc.txt  update_blog_table.sql
AI-Based-Career-Recommendation-System/: .incoming  README.md
configs/: encode.yaml  nlp.yaml
db/: CREATE analytics.career_events.sql  README.md
doc/: AI_FLOW_DIAGRAM.md  AUTO_PAYMENT_STATUS.md  BLOG_FEATURE_GUIDE.md  Biểu đồ big5.txt  CHATBOT_DEPLOYMENT.md  CHATBOT_FINAL_SETUP.md  CHATBOT_HISTORY_GUIDE.md  CHATBOT_QUICK_START.md  CHATBOT_TEST_GUIDE.md  CV_BUILDER_GUIDE.md  CV_QUICK_START.md  Cấu trúc monorepo_hoàn chỉnh.docx  DEBUG_PAYMENT.md  DEBUG_RIASEC_RCM.md  DEMO_SCRIPT_VN.md  DESIGN_GUIDELINES.md  FINAL_PAYMENT_PAGE.md  FINAL_SUMMARY_AUTO_PAYMENT.md  FIXED_NETWORK_ERROR.md  FIX_CANCELLED_REDIRECT.md  FIX_RIASEC_FILTERING.md  LOGIN_PAGE_FIX.md  (+33 more)
(+575 files in other folders)
